--- a/picApp/client/Home.html
+++ b/picApp/client/Home.html
@@ -79,9 +79,23 @@
 <!-- Template for the account upload page. -->
 <template name="upload">
 	<h2>Upload HEA</h2>
+
+  <button id="upload_widget_opener">Upload Images</button>
+
+  <!--Cloudinary Widget, handles picture uploads-->
+  <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    document.getElementById("upload_widget_opener").addEventListener("click", function() {
+      cloudinary.openUploadWidget({ cloud_name: 'tangg414', upload_preset: 'gjudg35a'},
+          function(error, result) { console.log(error, result) });
+    }, false);
+  </script>
 </template>
 
 <!-- Template for the account technology page. -->
 <template name="technology">
 	<h2>Tech HEA</h2>
+  <body>
+  <p>Cloudinary used to store the pictures</p>
+  </body>
 </template>
