--- a/picApp/client/Home.html
+++ b/picApp/client/Home.html
@@ -1,5 +1,5 @@
 <!-- Code in this template appears on all pages -->
-<template name="main">
+<template name="main" xmlns="http://www.w3.org/1999/html">
 <h1>Page Title</h1>
 {{> navigation}}
 <!-- All specific page info displayed after yield point. -->
@@ -47,23 +47,27 @@
 
 <!-- Template for the account registration page. -->
 <template name="signUp">
+  <div class="loginBox">
 	<h2>Sign Up</h2>
 <!-- Form that contains the text field for email, password, and Sign Up button. -->
         <form class="signUp">
-            <p>Email: <input type="email" name="email"></p>
-            <p>Password: <input type="password" name="password"></p>
+            <p>Email: <br><input type="email" name="email"></p>
+            <p>Password: <br><input type="password" name="password"></p>
             <p><input type="submit" value="Sign Up"></p>
         </form>
+  </div>
 </template>
 
 <!-- Template for the account login page. -->
 <template name="login">
+  <div class="loginBox">
     <h2>Login</h2>
     <form class="login">
-        <p>Email: <input type="email" name="email"></p>
-        <p>Password: <input type="password" name="password"></p>
+        <p>Email:<br> <input type="email" name="email"></p>
+        <p>Password:<br> <input type="password" name="password"></p>
         <p><input type="submit" value="Login"></p>
     </form>
+  </div>
 </template>
 
 <!-- Template for the account pics page. -->
@@ -73,7 +77,21 @@
 
 <!-- Template for the account news page. -->
 <template name="news">
-	<h2>News HEA</h2>
+	<h2 class="newsHead">News HEA</h2>
+  <div class="container-fluid articleBox">
+    <div class="article">
+      <h3>Article 1</h3>
+    </div>
+    <div class="article">
+      <h3>Article 2</h3>
+    </div>
+    <div class="article">
+      <h3>Article 3</h3>
+    </div>
+    <div class="article">
+      <h3>Article 4</h3>
+    </div>
+  </div>
 </template>
 
 <!-- Template for the account upload page. -->
@@ -97,5 +115,6 @@
 	<h2>Tech HEA</h2>
   <body>
   <p>Cloudinary used to store the pictures</p>
+  <p>Meteor</p>
   </body>
 </template>
