--- a/picApp/client/Home.html
+++ b/picApp/client/Home.html
@@ -19,9 +19,18 @@
 
         <input type="button" class="btn butt1" onclick="location.href='/pics';" value="Pics" />
 
-        <input type="button" class="btn butt" onclick="location.href='/news';" value="News" />
+        <input type="button" class="btn butt" id="upload_widget_opener" value="Upload" />
 
-        <input type="button" class="btn butt" onclick="location.href='/upload';" value="Upload" />
+        <!--Cloudinary Widget, handles picture uploads-->
+        <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+        <script type="text/javascript">
+          document.getElementById("upload_widget_opener").addEventListener("click", function() {
+            cloudinary.openUploadWidget({ cloud_name: 'tangg414', upload_preset: 'gjudg35a'},
+                function(error, result) { console.log(error, result) });
+          }, false);
+        </script>
+
+        <input type="button" class="btn butt" onclick="location.href='/news';" value="News" />
 
         <input type="button" class="btn butt" onclick="location.href='/technology';" value="Technology" />
       </div>
@@ -43,7 +52,10 @@
 
 <!-- Template for the home page. -->
 <template name="home">
-	<h1>Welcome to the homepage.</h1>
+	<h2 class="head1">Welcome to Piccy!</h2>
+  <p>
+    This website is intended for users to freely upload and view pictures of all kinds.
+  </p>
 </template>
 
 <!-- Template for the account registration page. -->
@@ -73,7 +85,6 @@
 
 <!-- Template for the account pics page. -->
 <template name="pics">
-	<h2>Pics HEA</h2>
   <head>
     <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
@@ -170,7 +181,7 @@
 
 <!-- Template for the account news page. -->
 <template name="news">
-	<h2 class="newsHead">News HEA</h2>
+	<h2 class="head1">News</h2>
   <div class="container-fluid articleBox">
     <div class="article">
       <h3>Article 1</h3>
@@ -187,25 +198,10 @@
   </div>
 </template>
 
-<!-- Template for the account upload page. -->
-<template name="upload">
-	<h2>Upload HEA</h2>
-
-  <button id="upload_widget_opener" style="color: black">Upload Images</button>
-
-  <!--Cloudinary Widget, handles picture uploads-->
-  <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
-  <script type="text/javascript">
-    document.getElementById("upload_widget_opener").addEventListener("click", function() {
-      cloudinary.openUploadWidget({ cloud_name: 'tangg414', upload_preset: 'gjudg35a'},
-          function(error, result) { console.log(error, result) });
-    }, false);
-  </script>
-</template>
 
 <!-- Template for the account technology page. -->
 <template name="technology">
-	<h2>Tech HEA</h2>
+	<h2 class="head1">Tech</h2>
   <body>
   <p>Cloudinary used to store the pictures</p>
   <p>Blue-imp gallery used to display photos</p>
