site now checks for correct input types when login or sign up

--- a/picApp/client/Home.html
+++ b/picApp/client/Home.html
@@ -64,8 +64,8 @@
 	<h2>Sign Up</h2>
 <!-- Form that contains the text field for email, password, and Sign Up button. -->
         <form class="signUp">
-            <p>Email: <br><input type="email" class="email1" name="email"></p>
-            <p>Password: <br><input type="password" class="password1" name="password"></p>
+            <p>Email: <br><input type="email" class="email1" name="email" required></p>
+            <p>Password: <br><input type="password" class="password1" name="password" required></p>
             <p><input type="submit" value="Sign Up" style="color: black"></p>
         </form>
   </div>
@@ -76,8 +76,8 @@
   <div class="loginBox">
     <h2>Login</h2>
     <form class="login">
-        <p>Email:<br> <input type="email" class="email1" name="email"></p>
-        <p>Password:<br> <input type="password" class="password1" name="password"></p>
+        <p>Email:<br> <input type="email" class="email1" name="email" required></p>
+        <p>Password:<br> <input type="password" class="password1" name="password" required></p>
         <p><input type="submit" value="Login" style="color: black"></p>
     </form>
   </div>
