Guests will see a login prompt at the page where account holders would see pics, after signing up or logging in you will see pics

--- a/picApp/client/Home.html
+++ b/picApp/client/Home.html
@@ -205,6 +205,9 @@
   <body>
   <p>Cloudinary used to store the pictures</p>
   <p>Blue-imp gallery used to display photos</p>
-  <p>Meteor</p>
+  <p>Meteor Packages:
+     accounts-ui
+     accounts-password
+     jquery-validation</p>
   </body>
 </template>
