--- a/picApp/client/Home.html
+++ b/picApp/client/Home.html
@@ -23,8 +23,9 @@
         <!--Cloudinary Widget, handles picture uploads-->
         <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
         <script type="text/javascript">
+          var email = "first";
           document.getElementById("upload_widget_opener").addEventListener("click", function() {
-            cloudinary.openUploadWidget({ cloud_name: 'tangg414', upload_preset: 'gjudg35a'},
+            cloudinary.openUploadWidget({ cloud_name: 'tangg414', upload_preset: 'gjudg35a', folder: email},
                 function(error, result) { console.log(error, result) });
           }, false);
         </script>
@@ -135,9 +136,11 @@
 
   <!-- loads photos-->
   <script>
+    //user email
+    var email="first";
     //photos location
-    var dir = "http://res.cloudinary.com/tangg414/image/upload/";
-    var dir2 = "http://res.cloudinary.com/tangg414/image/upload/c_scale,q_50,t_media_lib_thumb,w_100/";
+    var dir = "http://res.cloudinary.com/tangg414/image/upload/" + email + "/";
+    var dir2 = "http://res.cloudinary.com/tangg414/image/upload/c_scale,q_50,t_media_lib_thumb,w_100/" + email + "/";
     //number of photos to load
     var i;
     //image filename
