--- a/picApp/client/Home.html
+++ b/picApp/client/Home.html
@@ -23,7 +23,14 @@
         <!--Cloudinary Widget, handles picture uploads-->
         <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
         <script type="text/javascript">
-          var email = "first";
+
+
+
+          var email = currentUser;
+
+
+
+
           document.getElementById("upload_widget_opener").addEventListener("click", function() {
             cloudinary.openUploadWidget({ cloud_name: 'tangg414', upload_preset: 'gjudg35a', folder: email},
                 function(error, result) { console.log(error, result) });
@@ -52,7 +59,7 @@
 
 <!-- Template for the home page. -->
 <template name="home">
-	<h2 class="head1">Welcome to Piccy!</h2>
+	<h2 class="head1">Welcome to Piccy! </h2>
   <p>
     This website is intended for users to freely upload and view pictures of all kinds.
   </p>
@@ -136,8 +143,19 @@
 
   <!-- loads photos-->
   <script>
+
+
+
+
+
     //user email
-    var email="first";
+    var email= currentUser;
+
+
+
+
+
+
     //photos location
     var dir = "http://res.cloudinary.com/tangg414/image/upload/" + email + "/";
     var dir2 = "http://res.cloudinary.com/tangg414/image/upload/c_scale,q_50,t_media_lib_thumb,w_100/" + email + "/";
