--- a/picApp/client/Home.html
+++ b/picApp/client/Home.html
@@ -1,9 +1,4 @@
 <!-- Code in this template appears on all pages -->
-<head>
-  <script src="picApp/picApp.js" type="text/javascript"></script>
-
-</head>
-
 <template name="main" xmlns="http://www.w3.org/1999/html">
 <h1 class="head1">Piccy</h1>
 {{> navigation}}
@@ -28,7 +23,6 @@
         <!--Cloudinary Widget, handles picture uploads-->
         <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
         <script type="text/javascript">
-<<<<<<< Updated upstream
 
 
 
@@ -37,10 +31,7 @@
 
 
 
-=======
->>>>>>> Stashed changes
           document.getElementById("upload_widget_opener").addEventListener("click", function() {
-            alert(email);
             cloudinary.openUploadWidget({ cloud_name: 'tangg414', upload_preset: 'gjudg35a', folder: email},
                 function(error, result) { console.log(error, result) });
           }, false);
@@ -152,7 +143,6 @@
 
   <!-- loads photos-->
   <script>
-<<<<<<< Updated upstream
 
 
 
@@ -166,11 +156,9 @@
 
 
 
-=======
->>>>>>> Stashed changes
     //photos location
-    var dir = "http://res.cloudinary.com/tangg414/image/upload/";
-    var dir2 = "http://res.cloudinary.com/tangg414/image/upload/c_scale,q_50,t_media_lib_thumb,w_100/";
+    var dir = "http://res.cloudinary.com/tangg414/image/upload/" + email + "/";
+    var dir2 = "http://res.cloudinary.com/tangg414/image/upload/c_scale,q_50,t_media_lib_thumb,w_100/" + email + "/";
     //number of photos to load
     var i;
     //image filename
